# tgme

./: README.md  pyproject.toml
tgme/: cli.py  messenger.py
